--- a/calc.css
+++ b/calc.css
@@ -1,41 +1,52 @@
-/* {
-    border: solid 1px red;
-}*/
-
 body {
     background-image: url("images/calculator-1475432.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
 }
 
 h1 {
     text-align: center;
     background-color: black;
-    color: red;
+    color: red; 
 }
-
 
 .container {
     width: 400px;
     margin: auto;  
     background-color: grey; 
+    margin-top: 150px;
+    border-radius: 10px;
+    border: solid 2px black;
 }
 
 #calcbox {
     display: grid;
     grid-template-columns: 100px 100px 100px 100px;
     grid-template-rows: 100px 100px 100px 100px 100px;
-    
-    
 }
 
 #display {
     text-align: center;
     height: 40px;
     padding-top: 20px;
-
+    padding-bottom: 20px;
+    border: solid 2px black;
+    border-radius: 10px;
+    background-color: rgb(82, 80, 80);
+    font-size: 30px;
+    font-weight: 900;
 }
 
-#button {
+.btn {
     text-align: center;
     font-size: 20px;
     padding-top: 15px;
+    background-color: rgb(228, 225, 225);
+    border: solid 2px black;
+    border-radius: 10px;
+}
+
+#enter {
+    grid-column: 1 / span 4;
 }
